--- a/intex.html
+++ b/intex.html
@@ -13,16 +13,17 @@
     <header>
         <h1>Desenvolva suas habilidades</h1>
         <span>Thiago Leandro R. Felipe<br></span>
-        <a href="#">saiba mais</a>
+        <a href="#" class="botao">saiba mais</a>
     </header>
 
     <section>
-        <img src="https://github.com/ThiagoLRF.png" alt="Imagem github">
-        <h2>Profissionais de ponta, especializados e de alta confiança</h2>
-        <p>Thiago Leandro ex-jogador profissional além de todo<br> seu conhecimento futebolistico se epecializou <br>na área e aperfeiçoou seu conhecimento </p>
-        <h2>Ajudamos você a melhorar suas habilidades motoras e físicas</h2>
-        <p>Venha se juntar a esse time e tenha um desenvolvimento<br> pessoal e profissional no esporte que você ama</p>
-        <a href="#"class button ></a>
+        <img class= 'avatar' src="https://github.com/ThiagoLRF.png" alt="Imagem github">
+        <div id="texto-apresentacao">
+            <h2>Profissionais de ponta, especializados e de alta confiança</h2>
+            <p>Thiago Leandro ex-jogador profissional além de todo<br> seu conhecimento futebolistico se epecializou <br>na área e aperfeiçoou seu conhecimento </p>
+            <h2>Ajudamos você a melhorar suas habilidades motoras e físicas</h2>
+            <p>Venha se juntar a esse time e tenha um desenvolvimento<br> pessoal e profissional no esporte que você ama</p>
+        </div>
     </section>    
 
 </body>
