--- a/intex.html
+++ b/intex.html
@@ -13,10 +13,10 @@
     <header>
         <h1>Desenvolva suas habilidades</h1>
         <span>Thiago Leandro R. Felipe<br></span>
-        <a href="#" class="botao">saiba mais</a>
+        <a href="secao-apresentacao" class="botao">saiba mais</a>
     </header>
 
-    <section>
+    <section id="secao-apresentacao">
         <img class= 'avatar' src="https://github.com/ThiagoLRF.png" alt="Imagem github">
         <div id="texto-apresentacao">
             <h2>Profissionais de ponta, especializados e de alta confiança</h2>
@@ -26,6 +26,39 @@
         </div>
     </section>    
 
+    <section id="secao-projetos">
+        <ul>
+            <li class="card">
+                <div class="card-image"><img src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt=""></div>
+                <div class="card-info">
+                    <h4>habilidades</h4>
+                    <h5>motoras</h5>
+                    <p>movimentos alongamentos</p>
+                </div>
+            </li>
+            <li class="card">
+                <div class="card-image"><img src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt=""></div>
+                <div class="card-info">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+            </li>
+            <li class="card">
+                <div class="card-image"><img src="https://images.unsplash.com/photo-1599158150601-1417ebbaafdd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGZ1dGVib2x8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt=""></div>
+                <div class="card-info">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+
+    
+
+    
 </body>
 
 </html>
