--- a/intex.html
+++ b/intex.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Desenvolva suas habilidades</h1>
         <span>Thiago Leandro R. Felipe<br></span>
-        <a href="secao-apresentacao" class="botao">saiba mais</a>
+        <a href="#secao-apresentacao" class="botao">Saiba Mais</a>
     </header>
 
     <section id="secao-apresentacao">
@@ -23,13 +23,16 @@
             <p>Thiago Leandro ex-jogador profissional além de todo<br> seu conhecimento futebolistico se epecializou <br>na área e aperfeiçoou seu conhecimento </p>
             <h2>Ajudamos você a melhorar suas habilidades motoras e físicas</h2>
             <p>Venha se juntar a esse time e tenha um desenvolvimento<br> pessoal e profissional no esporte que você ama</p>
+            <a href="#secao-projetos" class="botao">Nossos Projetos</a>
         </div>
     </section>    
 
     <section id="secao-projetos">
         <ul>
             <li class="card">
-                <div class="card-image"><img src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt=""></div>
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
+                </div>
                 <div class="card-info">
                     <h4>habilidades</h4>
                     <h5>motoras</h5>
@@ -37,7 +40,9 @@
                 </div>
             </li>
             <li class="card">
-                <div class="card-image"><img src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt=""></div>
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
+                </div>
                 <div class="card-info">
                     <h4></h4>
                     <h5></h5>
@@ -45,7 +50,9 @@
                 </div>
             </li>
             <li class="card">
-                <div class="card-image"><img src="https://images.unsplash.com/photo-1599158150601-1417ebbaafdd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGZ1dGVib2x8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt=""></div>
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1599158150601-1417ebbaafdd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGZ1dGVib2x8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="">
+                </div>
                 <div class="card-info">
                     <h4></h4>
                     <h5></h5>
