--- a/intex.html
+++ b/intex.html
@@ -34,7 +34,7 @@
                     <img src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
                 </div>
                 <div class="card-info">
-                    <h4>habilidades</h4>
+                    <h4>abilidades</h4>
                     <h5>motoras</h5>
                     <p>movimentos alongamentos</p>
                 </div>
@@ -44,8 +44,8 @@
                     <img src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
                 </div>
                 <div class="card-info">
-                    <h4></h4>
-                    <h5></h5>
+                    <h4>habilidades </h4>
+                    <h5>Física</h5>
                     <p></p>
                 </div>
             </li>
@@ -62,6 +62,32 @@
         </ul>
     </section>
 
+    <section id="secao-orcamento">
+        <form action="">
+            <h3>Orçamento</h3>
+
+            <label for="qtde">Qtde de Páginas</label>
+            <input type="number" id="qtde" min="1" value="1">
+
+            <label for="js">Precisa de JS?</label>
+            <input type="checkbox" id="js">
+
+            <label for="layout">Precisa de Layout</label>
+            <div>
+                <input type="radio" id="layout_sim" name="layout">
+                <label for="">Sim, Preciso de Layout</label>
+
+                <input type="radio" id="layout_nao" name="layout">
+                <label for="layout_nao">Não, já tenho</label>
+            </div>
+
+            <label for="prazo">Prazo</label>
+            <input type="range" id="prazo">
+
+            <output>R$ 0,00</output>
+        </form> 
+        
+    </section>
 
     
 
