--- a/intex.html
+++ b/intex.html
@@ -34,9 +34,9 @@
                     <img src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
                 </div>
                 <div class="card-info">
-                    <h4>abilidades</h4>
-                    <h5>motoras</h5>
-                    <p>movimentos alongamentos</p>
+                    <h4>Habilidades</h4>
+                    <h5>Motoras</h5>
+                    <p>Movimentos, Alongamentos, Fundamentos</p>
                 </div>
             </li>
             <li class="card">
@@ -44,9 +44,9 @@
                     <img src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
                 </div>
                 <div class="card-info">
-                    <h4>habilidades </h4>
+                    <h4>Habilidades </h4>
                     <h5>Física</h5>
-                    <p></p>
+                    <p>Parte Tática, Treino com Bola, Sprints</p>
                 </div>
             </li>
             <li class="card">
@@ -54,9 +54,9 @@
                     <img src="https://images.unsplash.com/photo-1599158150601-1417ebbaafdd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGZ1dGVib2x8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="">
                 </div>
                 <div class="card-info">
-                    <h4></h4>
-                    <h5></h5>
-                    <p></p>
+                    <h4>Crescimento </h4>
+                    <h5>Pessoal</h5>
+                    <p>Parte Mental, Evolução Pessoal, Novas Habilidades</p>
                 </div>
             </li>
         </ul>
