--- a/intex.html
+++ b/intex.html
@@ -81,10 +81,10 @@
                 <label for="layout_nao">Não, já tenho</label>
             </div>
 
-            <label for="prazo">Prazo</label>
-            <input type="range" id="prazo">
+            <label for="prazo" id="label_prazo">Prazo</label>
+            <input type="range" id="prazo" min="1" max="10">
 
-            <output id="preco">R$ 0,00</output>
+            <output id="output">R$ 0,00</output>
         </form> 
         
     </section>
