--- a/intex.html
+++ b/intex.html
@@ -55,7 +55,7 @@
     </header>
 
     <section id="secao-apresentacao">
-        <img class= 'avatar' src="https://github.com/ThiagoLRF.png" alt="Imagem github">
+        <img class= 'avatar large-only' src="https://github.com/ThiagoLRF.png" alt="Imagem github">
         <div id="texto-apresentacao">
             <h2>Profissionais de ponta, especializados e de alta confiança</h2>
             <p>Thiago Leandro ex-jogador profissional além de todo<br> seu conhecimento futebolistico se epecializou <br>na área e aperfeiçoou seu conhecimento </p>
