--- a/intex.html
+++ b/intex.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Portifolio</title>
-      <link rel="stylesheet" href="https://thiagolrf.github.io/Site_de_futebol/assets/css/style.css">
+      <link rel="stylesheet" href="https://thiagolrf.github.io/Site_de_futebol/assets/css/style.css?v=1">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     </head>
@@ -127,8 +127,8 @@
         
     </section>
 
-    <script src="https://thiagolrf.github.io/Site_de_futebol/assets/js/script.js"></script>
-    <script src="https://thiagolrf.github.io/Site_de_futebol/assets/js/menu.js"></script>
+    <script src="https://thiagolrf.github.io/Site_de_futebol/assets/js/script.js?v=1"></script>
+    <script src="https://thiagolrf.github.io/Site_de_futebol/assets/js/menu.js?v=1"></script>
 
     
 </body>
