--- a/intex.html
+++ b/intex.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <link rel="shortcut icon" href="#">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Portifolio</title>
-      <link rel="stylesheet" href="https://thiagolrf.github.io/Site_de_futebol/assets/css/style.css?v=1">
+      <link rel="stylesheet" href="./assets/css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="shortcut icon" href="#">
+      <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     </head>
 
 <body>
@@ -127,8 +128,8 @@
         
     </section>
 
-    <script src="https://thiagolrf.github.io/Site_de_futebol/assets/js/script.js?v=1"></script>
-    <script src="https://thiagolrf.github.io/Site_de_futebol/assets/js/menu.js?v=1"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/menu.js"></script>
 
     
 </body>
