--- a/intex.html
+++ b/intex.html
@@ -5,309 +5,10 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Portifolio</title>
+      <link rel="stylesheet" href="./assets/css/style.css">
       <link rel="shortcut icon" href="#">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <style>
 
-
-            *{
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-
-
-            :root{
-                font-size: 62,5% ; /*10px / 16px*/
-                --font-default: 'Montserrat'
-                --font-heading: 'popping'
-                --collor-default:'#fff'
-                collor-secundary: '#000'
-            }
-
-            html{
-                scroll-behavior: smooth;
-            }
-
-            #hamburguer{
-                display: flex;
-                justify-content: space-between;
-                flex-direction: column;
-                height: 3rem;
-                width: 3rem;
-                position: fixed;
-                top: 2rem;
-                right: 2rem;
-                cursor: pointer;
-                z-index: 11;
-            }
-
-            #hamburguer .linha{
-                width: 100%;
-                height: .5rem;
-                background-color: #FFF;
-                box-shadow: 0 .2rem .2rem #000;
-            }
-
-            nav ul {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                gap: 1rem;
-                position: fixed;
-                right: -20rem;
-                background-color: #4C4C4C;
-                height: 100vh;
-                width: 20rem;
-                z-index: 10;
-                transition: right 1s;
-            }
-
-            #menu li {
-                list-style: none;
-            }
-
-            #menu a{
-                font-family: Poppins;
-                font-weight: 600;
-                font-size: 2rem;
-                color: white;
-                text-shadow: 0 0.5rem 0.5rem #00000067;
-            }
-
-            #menu a:hover{
-                color: rgba(255, 255, 255, 0.60);
-            }
-
-            .menu-show{
-                right: 0;
-            }
-
-            body{
-                font-family: var(--font-default);
-            }
-
-
-            header{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 2rem;
-                height: 100vh;
-                background-image: url("../imagens/thiagosite.jpg");
-                background-size: cover;
-                color: var(--collor-default);
-                /* shorthand */
-                padding: 21rem 11rem
-
-            }
-
-            h1, h2, h3{
-                font-family: var(--font-heading);
-                font-weight: 900;
-            }
-
-
-            h1{
-                font-family: var(--font-heading);
-                font-size: clamp(3rem,5vw,6rem);
-                font-weight: 900;
-                margin-bottom: 1rem;
-                color:rgb(255, 255, 255);
-                text-transform: uppercase;
-                text-shadow: rgb(0, 0, 0);
-                -webkit-text-stroke: 0.15rem red;
-            }
-
-            h2{
-                font-family: 'Mouse Memoirs';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 32px;
-                line-height: 37px;
-                text-align: center;
-            }
-
-
-            span{
-                font-family: 'Montserrat';
-                font-size: 3.00rem;
-                font-weight: 700;
-                color: #fff;
-                text-shadow: rgb(0, 0, 0);
-            }
-
-
-            a{
-                font-size: 2.50rem;
-
-            ;
-
-            }
-
-            h2{
-                font-weight: 700;
-                font-size: 20px;
-
-                padding: 5px;
-
-                background-color: #E3E3E3;
-
-                color: #4C4C4C;
-
-            }
-
-
-            p{
-                font-family: 'Montserrat';
-                font-size: 3rem;
-            }
-
-            .botao{
-                padding: 1.0rem 1.0rem;
-                background: rgb(17, 1, 255);
-                border-radius: 4rem;
-                font-family: (--font-heading);
-                font-size: 3.5rem;
-                color: #fff;
-                text-shadow: 0 0.2rem 0.2rem rgb(5, 5, 5);
-                text-decoration: none;
-            }
-
-            section{
-                display: flex;
-                gap: 2rem;
-                padding: 8.6rem;
-            }
-
-            .avatar{
-                border-radius: 50%;
-                width: 400px;
-                height: 400px;
-                animation: zoom 2s ease-in-out;
-            }
-
-            @keyframes zoom{
-                0%{
-                    transform: scale(1.3);
-                }
-                100%{
-                    transform: scale(1);
-                }
-
-            }
-
-            #texto-apresentacao{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 2rem;
-            }
-
-            #secao-projetos{
-                background-color: rgb(0, 0, 0);
-                color: var(--collor-default);
-            }
-
-            #secao-projetos ul{
-                display: flex;
-                gap: 3rem;
-                justify-content: space-around;
-                list-style: none;
-            }
-
-            .card{
-                position: relative;
-                cursor: pointer;
-            }
-
-            .card:hover .card-image{
-                opacity: .2;
-            }
-
-            .card:hover .card-info{
-                opacity: 1;
-                bottom: 20%;
-                color: #fff;
-            }
-
-            .card-image img{
-                height: 400px;
-                width: 300px;
-                border-radius: 10px;
-            }
-
-            .card-info{
-                position: absolute;
-                bottom: 0%;
-                opacity: 0;
-                transition: opacity 0.5s ease-in-out, bottom .8s;
-            }
-
-            #secao-orcamento{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                background-color: #464646;
-            }
-
-            #secao-orcamento form{
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                justify-items: start;
-                row-gap: 1rem;
-                padding: 2rem;
-                background-color: #fff;
-                border-radius: 10px;
-                position: relative;
-            }
-
-            #secao-orcamento output{
-                grid-column: 2;
-                font-size: 2.0rem;
-            }
-
-            #secao-orcamento label{
-
-                font-size: 1.5rem;
-            }
-
-
-            #secao-orcamento h3{
-                position: absolute;
-                top: -10px;
-                background-color: #202ab1;
-                color: #fff;
-                font-size: 2.0rem;
-
-
-            }
-
-            input[type=number]{
-                padding: .5rem;
-                background-color: #464646;
-                color: #fff;
-                border: none;
-                font-size: 1.5rem;
-            }
-
-            @media(max-width: 900px) {
-                #secao-projetos ul{
-                    flex-direction: column;
-
-                }
-
-                .lager-only{
-                    display: none;
-                }
-
-                #secao-orcamento form{
-                    grid-template-columns: 1fr;
-                }
-            }
-        </style>
     </head>
 
 <body>
