--- a/intex.html
+++ b/intex.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Portifolio</title>
-      <link rel= "stylesheet" href="./assets/css/style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Futnews</title>
+    <link rel= "stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    </head>
+</head>
 
-<body>
+    <body>
 
-    <nav>
-        <div id="hamburguer">
-            <div class="linha"></div>
-            <div class="linha"></div>
-            <div class="linha"></div>
-        </div>
+        <nav>
+            <div id="hamburguer">
+                <div class="linha"></div>
+                <div class="linha"></div>
+                <div class="linha"></div>
+            </div>
 
-        <ul id="menu">
-            <li>
-                <a href="#secao-home">
-                    <i class="fa-solid fa-house"></i>
-                    Home
-                </a>
-            </li>
-            <li>
-                <a href="#secao-apresentacao">
-                    <i class="fa-solid fa-user"></i>
-                    Apresentação
-                </a>
-            </li>
-            <li>
-                <a href="#secao-projetos">
-                    <i class="fa-solid fa-code"></i>
-                    Projetos
-                </a>
-            </li>
-            <li>
-                <a href="#secao-orcamento">
-                    <i class="fa-solid fa-money-bill"></i>
-                    Orçamento
-                </a>
-            </li>
-        </ul>
-    </nav>
+            <ul id="menu">
+                <li>
+                    <a href="#secao-home">
+                        <i class="fa-solid fa-house"></i>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="#secao-apresentacao">
+                        <i class="fa-solid fa-user"></i>
+                        Apresentação
+                    </a>
+                </li>
+                <li>
+                    <a href="#secao-projetos">
+                        <i class="fa-solid fa-code"></i>
+                        Projetos
+                    </a>
+                </li>
+                <li>
+                    <a href="#secao-orcamento">
+                        <i class="fa-solid fa-money-bill"></i>
+                        Orçamento
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
     
     <header id="secao-home"> 
@@ -55,7 +55,7 @@
     </header>
 
     <section id="secao-apresentacao">
-        <img class= 'avatar large-only' src="https://github.com/ThiagoLRF.png" alt="Imagem github">
+        <img class= 'avatar large-only' src="./assets/imagens/126630182.png" alt="Imagem github">
         <div id="texto-apresentacao">
             <h2>Profissionais de ponta, especializados e de alta confiança</h2>
             <p>Thiago Leandro ex-jogador profissional além de todo<br> seu conhecimento futebolistico se epecializou <br>na área e aperfeiçoou seu conhecimento </p>
@@ -69,7 +69,8 @@
         <ul>
             <li class="card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
+                    <img src="./assets/imagens/thiagosite2.jpg" alt="">
+
                 </div>
                 <div class="card-info">
                     <h4>Habilidades</h4>
@@ -79,7 +80,7 @@
             </li>
             <li class="card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnV0ZWJvbHxlbnwwfDF8MHx8&auto=format&fit=crop&w=400&q=60" alt="">
+                    <img src="./assets/imagens/thiagosite3.jpg" alt="">
                 </div>
                 <div class="card-info">
                     <h4>Habilidades </h4>
@@ -89,7 +90,7 @@
             </li>
             <li class="card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1599158150601-1417ebbaafdd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGZ1dGVib2x8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="">
+                    <img src="./assets/imagens/thiagosite4.jpg" alt="">
                 </div>
                 <div class="card-info">
                     <h4>Crescimento </h4>
@@ -134,4 +135,3 @@
 </body>
 
 </html>
-
